# rss-funnel

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Cross.toml  DEVELOPMENT.org  Dockerfile  Dockerfile.armhf  Makefile  README.org  cliff.toml  flake.nix  release.sh
.github/workflows/: ci.yaml  nightly.yaml  release.yaml
fixtures/: atareao.xml  lobste.rs.xml  minimal_rss_20.xml  sample_atom.xml  youtube.xml
fixtures/json/: news.json
front/: inspector.js  style.css
inspector/: .babelrc  .gitignore  package.json  pnpm-lock.yaml
inspector/src/: FeedInspector.js  Filter.js  app.js  index.html  login.html  style.css  util.js
scripts/: watch-dev.sh
src/: cache.rs  cli.rs  client.rs  config.rs  error.rs  feed.rs  filter.rs  filter_cache.rs  filter_pipeline.rs  html.rs  inline_filter.rs  js.rs  main.rs  otf_filter.rs  server.rs  source.rs  test_utils.rs  util.rs
src/client/: cache.rs
src/feed/: conversion.rs  extension.rs  norm.rs  preview.rs
src/filter/: composite.rs  config.rs  convert.rs  find_magnet.rs  full_text.rs  highlight.rs  html.rs  image_proxy.rs  inject_css.rs  js.rs  js_filter.rs  json_to_feed.rs  limit.rs  magnet.rs  merge.rs  note.rs  regex.rs  sanitize.rs  select.rs  simplify_html.rs
src/filter_pipeline/: filter_cache.rs
src/js/: builtin.rs  dom.rs  fetch.rs
src/server/: auth.rs  endpoint.rs  feed_service.rs  image_proxy.rs  inspector.rs  watcher.rs  web.rs
src/server/web/: endpoint.rs  filters.rs  list.rs  login.rs
src/util/: date.rs  html.rs
static/: common.css  endpoint.css  endpoint.js  list.css  login.css  login.js
