[package]
name = "rss-funnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime, utility and helper crates
async-trait = "0.1.74"
thiserror = "1.0.51"
futures = "0.3.29"
itertools = "0.12.0"
paste = "1.0.14"
tokio = { version = "1.35.0", features = ["macros", "net", "rt-multi-thread"] }

# Command line and config parsing
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
duration-str = { version = "0.7.1", default-features = false, features = ["serde"] }

# Feed formats support
atom_syndication = { version = "0.12.2", features = ["with-serde"] }
rss = { version = "2.0.6", features = ["serde"] }

# Web server
axum = "0.7.2"
tower = "0.4.13"
http = "1.0.0"
url = "2.5.0"
mime = "0.3.17"

# webui
maud = { version = "0.26.0", features = ["axum"] }

# HTML manipulation in the feeds
scraper = "0.18.1"
ego-tree = "0.6.2"
# for extracting article content from HTML, used in simplify_html filter
readability = { version = "0.3.0", default-features = false }
html5ever = "0.26.0"
htmlescape = "0.3.1"
xmlem = "0.2.3"

# JS runtime crates
rquickjs = { version = "0.4.0", features = ["loader", "parallel", "macro", "futures", "exports", "either"] }
blake2s_simd = "1.0.2" # for calculating digest in caching support of the remote loader
serde_json = "1.0.108" # for data transfer with the JS runtime
either = "1.9.0" # used for returning sum types from the JS runtime

# Web client (blocking and async both used, blocking used in the JS runtime)
# TODO: upgrade reqwest after its hyper 1.0 upgrade
reqwest = { version = "0.11.23", default-features = false, features = ["blocking", "rustls-tls", "trust-dns"] }
encoding_rs = "0.8.33"
lru = "0.12.2"

# Used in sanitize filter to remove/replace text contents
regex = "1.10.2"

# Logging
tracing = { version = "0.1.40"}
tracing-subscriber = "0.3.18"
lazy_static = "1.4.0"
serde_regex = "1.1.0"
axum-macros = "0.4.1"

[patch.crates-io]
ego-tree = { git = "https://github.com/shouya/ego-tree.git" }
